# report_avg_values

./: .coverage  .gitignore  README.md  main.py  pyproject.toml
tests/: test_main.py
